--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
 
         <div class="section-title">
           <h2>About</h2>
+          <h1>hello</h1>
+          
           <p>A competent and committed Design and Development , looking for a rewarding career in the Information Technology sector and Interested for translation work.</p>
         </div>
 
